# bitchat-metal

./: .gitignore  CLAUDE.md  Cargo.toml  M1_BLE_SETUP.md  NOTES_FOR_CODEX.md  README.md  memory.x
.cargo/: config.toml
src/: config.rs  main.rs  main_simple_test.rs
src/bitchat/: mod.rs  packet.rs
src/ble/: advertise.rs  mod.rs  service.rs
src/protocol/: fragmentation.rs  handler.rs  message.rs  mod.rs  router.rs  text.rs
