[package]
name = "bitchat-metal"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "task-arena-size-16384"] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-nrf = { version = "0.2", features = ["nrf52840", "defmt", "time-driver-rtc1", "gpiote"] }
defmt = "0.3"
defmt-rtt = "0.4"

# For BLE support
nrf-softdevice = { version = "0.1", features = [
    "defmt",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-central",
    "ble-gatt-server",
    "ble-gatt-client"
]}
nrf-softdevice-s140 = "0.1"
futures = { version = "0.3", default-features = false }
fixed = "1.24"

# For message serialization
heapless = "0.8"
embassy-sync = "0.6"
embassy-futures = "0.1"
